[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/player_bullet.gd" type="Script" id=1]
[ext_resource path="res://art/beams.png" type="Texture" id=2]
[ext_resource path="res://art/effects/spotlight_1.png" type="Texture" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 12.0
height = 6.0

[node name="player_bullet" type="Area2D"]
position = Vector2( 516, 275 )
collision_layer = 16
collision_mask = 6
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="glow" type="Light2D" parent="."]
scale = Vector2( 5, 5 )
texture = ExtResource( 3 )
texture_scale = 0.1
energy = 4.0
range_height = 60.0
shadow_enabled = true
shadow_color = Color( 0.109804, 0.027451, 0.027451, 0.65098 )

[node name="bullet" type="Sprite" parent="glow"]
rotation = 3.14159
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 116.551, 5.74595, 16.9403, 16.9403 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="lifetime" type="Timer" parent="."]
wait_time = 0.25

[connection signal="area_entered" from="." to="." method="_on_player_bullet_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_player_bullet_body_entered"]
[connection signal="timeout" from="lifetime" to="." method="_on_lifetime_timeout"]
